Funcionalidade de apagar gerente de agência

--- a/src/templates/alteraGerente.html
+++ b/src/templates/alteraGerente.html
@@ -137,7 +137,7 @@
         </div>
     </div>
     <br>
-    <a href="{{'/demiteGerente/%s' % (id_usuario)}}"><input type="button" value="EXCLUIR CONTA" id="deletar"></a>
+    <a href="{{'/demiteGerente/%s' % (linhaUsuario['id_usuario'])}}"><input type="button" value="EXCLUIR GERENTE" id="deletar"></a>
     <a href="{{'/alteraAgencia/%s' % (linhaAgencia['numero_agencia'])}}" class="voltar"><button> Voltar </button></a>
 </body>
 </html>
