Gerenciamento de gerentes implementado para o gerente geral

--- a/src/templates/agencias.html
+++ b/src/templates/agencias.html
@@ -90,7 +90,9 @@
         {% endfor %}
     </div>
     <div class="cent">
+        
         <a href="/criaGerenteNaoAtribuido" class="voltar"><button> Criar Gerente de agência </button></a>
+        <a href="/listaGerentes" class="voltar"><button> Gerenciar gerentes </button></a>
         <a href="/criaAgencia" class="voltar"><button> Criar agência </button></a>
         
         <a href="/homeGerenteGeral" class="voltar"><button> Voltar </button></a>
