--- a/src/templates/alteraGerente.html
+++ b/src/templates/alteraGerente.html
@@ -43,7 +43,7 @@
         </header>
     </div>
     <div id="flexbox">
-        <h1>Alteração de dados de gerente de agência</h1>
+        <h1>Alteração de dados de gerente de agência {{linhaAgencia['numero_agencia']}}</h1>
     </div>
     <div class="divtabuser">
         <div class="dirowuser">
