--- a/src/templates/usuarios_agencia.html
+++ b/src/templates/usuarios_agencia.html
@@ -175,7 +175,7 @@
                                             {% if linhaGerente['atribuicao'] == 'Sim' %}
                                                 <button><a href="{{'/alteraGerente/%s' % (linhaGerente['id_usuario'])}}"class="nav-link2">Alterar dados</a></button>
                                             {% else %}
-                                                <button><a href="{{'/alteracaoGerente/%s' % (linhaGerente['id_usuario'])}}"class="nav-link2">Alterar dados</a></button>
+                                                <button><a href="{{'/alteraGerente/%s' % (linhaGerente['id_usuario'])}}"class="nav-link2">Alterar dados</a></button>
                                             {% endif %}
                             
                                         {% endif %}
