--- a/src/static/styles/styles.css
+++ b/src/static/styles/styles.css
@@ -592,6 +592,26 @@ span.botoes
   margin-top: 5%;
 }
 
+#botaoForm{
+  display: block;
+  background-color: white;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 1vh;
+  border-radius: 10px;
+  padding: 0 0.7vw;
+  border: none;
+  
+
+}
+
+#botaoForma{
+  display: block;
+  width: 100%;
+  text-decoration: none;
+
+}
+
 /* botão voltar */
 .voltar {
   background-color: #f0e5c7;
@@ -685,16 +705,12 @@ span.botoes
 
 .altera-form{
   width:23vw;
-  top:38vh;
-  left:50%;
-  position: absolute;
-  transform: translate(-50%,-50%);
   font-family: Arial, Helvetica, sans-serif;
   color: #000;
   border-radius: 5px;
   background-color: #f0e5c7;
   padding: 25px;
-  margin-top: 20vh;
+  margin-top: 5vh;
 }
 
 .altera-form h1{
