--- a/src/templates/criaAgencia.html
+++ b/src/templates/criaAgencia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -46,78 +46,68 @@
 
 
             
-
-        <form action="#" method="post" class="altera-form">
-            <h1>Criação de agência</h1>
-            {% with mensagens = get_flashed_messages() %}
-                {% for msg in mensagens %}
-                    <br><p id="confimacaoSenha">{{msg}}</p><br>
-                {% endfor %}
-            {% endwith %}
-            <label for="nome_agencia">Nome da agência:</label>
-            <input type="text" name="nome_agencia"><br>
-            <label for="numero_agencia">Número de ID da agência:</label>
-            <input type="text" name="numero_agencia"><br>
-            <label for="rua_avenida_agencia">Rua/Avenida:</label>
-            <input type="text" name="rua_avenida_agencia"><br>
-            <label for="numero_local_agencia">Número do local da agencia:</label>
-            <input type="text" name="numero_local_agencia"><br>
-            <label for="bairro_agencia">Bairro:</label>
-            <input type="text" name="bairro_agencia"><br>
-            <label for="cidade_agencia">Cidade:</label>
-            <input type="text" name="cidade_agencia"><br>
-            <label for="estado_agencia">Estado:</label>
-            <select name="estado_agencia" id="estado">
-                <option value=''></option>
-                <option value="Acre">Acre</option>
-                <option value="Alagoas">Alagoas</option>
-                <option value="Amapá">Amapá</option>
-                <option value="Amazonas">Amazonas</option>
-                <option value="Bahia">Bahia</option>
-                <option value="Ceará">Ceará</option>
-                <option value="Distrito Federal">Distrito Federal</option>
-                <option value="Espirito Santo">Espirito Santo</option>
-                <option value="Goiás">Goiás</option>
-                <option value="Maranhão">Maranhão</option>
-                <option value="Mato Grosso">Mato Grosso</option>
-                <option value="Mato Grosso do Sul">Mato Grosso do Sul</option>
-                <option value="Minas Gerais">Minas Gerais</option>
-                <option value="Pará">Pará</option>
-                <option value="Paraíba">Paraíba</option>
-                <option value="Paraná">Paraná</option>
-                <option value="Pernambuco">Pernambuco</option>
-                <option value="Piauí">Piauí</option>
-                <option value="Rio de Janeiro">Rio de Janeiro</option>
-                <option value="Rio Grande do Norte">Rio Grande do Norte</option>
-                <option value="Rio Grande do Sul">Rio Grande do Sul</option>
-                <option value="Rondônia">Rondônia</option>
-                <option value="Roraima">Roraima</option>
-                <option value="Santa Catarina">Santa Catarina</option>
-                <option value="São Paulo">São Paulo</option>
-                <option value="Sergipe">Sergipe</option>
-                <option value="Tocantins">Tocantins</option>
-            </select><br><br>
-
-            <hr><br><br>
-            <h4>Atribua um gerente que ainda não gerencie uma agencia ou deixe em branco para criar um gerente para essa agência</h4>
-            <select name="numero_matricula" id="estados">
-                <option value=""></option>
-                {% for linhaGerente in tabelaGerente %}
-                    {% if linhaGerente['numero_matricula'] != 1 %}
-                            {% for linhaUsuario in tabelaUsuario %}
-                                {% if linhaUsuario['id_usuario'] == linhaGerente['id_usuario'] and linhaGerente['atribuicao'] == 'Nao' %}
-                                    <option value="{{linhaGerente['numero_matricula']}}">{{linhaUsuario['nome_usuario']}}</option>
-                                {% endif %}
-                            {% endfor %}
-                        {% endif %}
-                    {% set atribuido = false %}
-                {% endfor %}
-                        
-            </select>
-
-            <input type="submit" value="Criar agência" id="alterar">
-        </form>
+        <div id="flexbox">
+            <form action="#" method="post" class="altera-form">
+                <h1>Criação de agência</h1>
+                {% with mensagens = get_flashed_messages() %}
+                    {% for msg in mensagens %}
+                        <br><p id="confimacaoSenha">{{msg}}</p><br>
+                    {% endfor %}
+                {% endwith %}
+                <label for="nome_agencia">Nome da agência:</label>
+                <input type="text" name="nome_agencia" required><br>
+                <label for="numero_agencia">Número de ID da agência:</label>
+                <input type="number" name="numero_agencia" required><br>
+                <label for="rua_avenida_agencia">Rua/Avenida:</label>
+                <input type="text" name="rua_avenida_agencia" required><br>
+                <label for="numero_local_agencia">Número do local da agencia:</label>
+                <input type="text" name="numero_local_agencia" required><br>
+                <label for="bairro_agencia">Bairro:</label>
+                <input type="text" name="bairro_agencia" required><br>
+                <label for="cidade_agencia">Cidade:</label>
+                <input type="text" name="cidade_agencia" required><br>
+                <label for="estado_agencia" >Estado:</label>
+                <select name="estado_agencia" id="estado" required>
+                    <option value=''></option>
+                    <option value="Acre">Acre</option>
+                    <option value="Alagoas">Alagoas</option>
+                    <option value="Amapá">Amapá</option>
+                    <option value="Amazonas">Amazonas</option>
+                    <option value="Bahia">Bahia</option>
+                    <option value="Ceará">Ceará</option>
+                    <option value="Distrito Federal">Distrito Federal</option>
+                    <option value="Espirito Santo">Espirito Santo</option>
+                    <option value="Goiás">Goiás</option>
+                    <option value="Maranhão">Maranhão</option>
+                    <option value="Mato Grosso">Mato Grosso</option>
+                    <option value="Mato Grosso do Sul">Mato Grosso do Sul</option>
+                    <option value="Minas Gerais">Minas Gerais</option>
+                    <option value="Pará">Pará</option>
+                    <option value="Paraíba">Paraíba</option>
+                    <option value="Paraná">Paraná</option>
+                    <option value="Pernambuco">Pernambuco</option>
+                    <option value="Piauí">Piauí</option>
+                    <option value="Rio de Janeiro">Rio de Janeiro</option>
+                    <option value="Rio Grande do Norte">Rio Grande do Norte</option>
+                    <option value="Rio Grande do Sul">Rio Grande do Sul</option>
+                    <option value="Rondônia">Rondônia</option>
+                    <option value="Roraima">Roraima</option>
+                    <option value="Santa Catarina">Santa Catarina</option>
+                    <option value="São Paulo">São Paulo</option>
+                    <option value="Sergipe">Sergipe</option>
+                    <option value="Tocantins">Tocantins</option>
+                </select><br><br>
+                
+                <input type="submit" name = "atribuicao" value="Criar sem atribuir" id="alterar">
+                <input type="submit" naem = "atribuicao" value="Atribuir gerente" id="alterar">
+            </form>
+        </div>
+        
     </div>
+    <br>
+    <a href="/agencias" class="voltar"><button> Voltar </button></a>
+    <br>
+    
     
     
 </body>
