--- a/src/templates/deposito.html
+++ b/src/templates/deposito.html
@@ -81,7 +81,7 @@
                 {% endfor %}
             {% endwith %}
             <div class="corposaque">
-                <h2>Saldo atual: {{saldo}}</h2>
+                <h2>Saldo atual: {{saldo | moeda }}</h2>
                 <h1>Insira o valor que deseja depositar:</h1>
                 <form action="" method="POST">
                 <span id="cifrão">
