Correção do posicionamento dos formulários de cadastro, criação de agencia e de gerente.

--- a/src/static/styles/styles.css
+++ b/src/static/styles/styles.css
@@ -1,5 +1,9 @@
 /*CONFIGURAÇÕES COMPARTILHADAS*/
 /* começo menu */
+
+a{
+  text-decoration: none;
+}
 .menu{  position: absolute;
   top:6vh;
   left: 13vw;
