--- a/src/templates/configCapital.html
+++ b/src/templates/configCapital.html
@@ -2,8 +2,13 @@
 {% block content %}
 <div class="login-form">
     <form method="POST" action="#">
+        {% with mensagens = get_flashed_messages() %}
+            {% for msg in mensagens %}
+                <br><p id="confimacaoSenha">{{msg}}</p><br>
+            {% endfor %}
+        {% endwith %}
         <label for="capital_inicial">Capital Inicial disponível:</label>
-        <input type="number" name="capital_inicial" pattern="[0-9]{1, 10}.[0-9]{2}" placeholder="R$ 00.00" autocomplete="off">
+        <input type="text" name="capital_inicial" pattern="[0-9]{1, 10}.[0-9]{2}" placeholder="R$ 00.00" autocomplete="off">
         <button type="submit" value="Entrar">Confirmar</button>
     </form>  
 </div>
