--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -35,25 +35,44 @@
 
     {% if gerente == 'SIM' %}
         <div style="text-align:center"><h1>Login para gerentes</h1></div>
+        
+        <div class="login-form">
+            {% with mensagens = get_flashed_messages() %}
+                {% for msg in mensagens %}
+                    <p id="confimacaoSenha">{{msg}}</p>
+                {% endfor %}
+            {% endwith %}
+            <form method="POST" action="#">
+                <label for="numero_matricula">Número de matricula:</label>
+                <input type="text" name="numero_matricula" maxlength="6">
+                <label for="senha">Senha:</label>
+                <input type="password" name="senha" maxlength="16">
+                <button type="submit" value="Entrar">Entrar</button>
+            </form>  
+        </div>
+        
+
+    {% else %}
+        {% block content %}
+        <div class="login-form">
+            {% with mensagens = get_flashed_messages() %}
+                {% for msg in mensagens %}
+                    <p id="confimacaoSenha">{{msg}}</p>
+                {% endfor %}
+            {% endwith %}
+            <form method="POST" action="#">
+                <label for="numero_conta">Número da conta:</label>
+                <input type="text" name="numero_conta" minlength="6" maxlength="6">
+                <label for="senha">Senha:</label>
+                <input type="password" name="senha" maxlength="16">
+                <button type="submit" value="Entrar">Entrar</button>
+            </form>  
+        </div>
+        {% endblock %}
     {% endif %}
 
     <!-- Forms provisório -->
-    {% block content %}
-    <div class="login-form">
-        {% with mensagens = get_flashed_messages() %}
-            {% for msg in mensagens %}
-                <p id="confimacaoSenha">{{msg}}</p>
-            {% endfor %}
-        {% endwith %}
-        <form method="POST" action="#">
-            <label for="numero_conta">Número da conta:</label>
-            <input type="text" name="numero_conta" minlength="6" maxlength="6">
-            <label for="senha">Senha:</label>
-            <input type="password" name="senha" maxlength="16">
-            <button type="submit" value="Entrar">Entrar</button>
-        </form>  
-    </div>
-    {% endblock %}
+    
     
 
 </body>
