configurações na rota inicial, data é uma configuração nova, função que calcula a diferença entre a data atual e a data configurável e alteração de todas as datas do sistema para a nova função

--- a/src/templates/configCapital.html
+++ b/src/templates/configCapital.html
@@ -1,4 +1,5 @@
 {% extends 'login.html'%}
+{% block navbar %}{% endblock %}
 {% block content %}
 <div class="login-form">
     <form method="POST" action="#">
@@ -9,6 +10,8 @@
         {% endwith %}
         <label for="capital_inicial">Capital Inicial disponível:</label>
         <input type="text" name="capital_inicial" pattern="[0-9]{1, 10}.[0-9]{2}" placeholder="R$ 00.00" autocomplete="off">
+        <label for="data_atual">Data atual:</label>
+        <input type="date" name="data_atual">
         <button type="submit" value="Entrar">Confirmar</button>
     </form>  
 </div>
