--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -21,7 +21,7 @@
     <div class="topo">
         <header class="navbar">
             <div class="menu">
-                <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
+                <span style="font-size:4.5vh;cursor:pointer" onclick="abre()">&#9776;</span>
             </div>
             <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
