--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -21,14 +21,14 @@
         {% block navbar%}
         <header class="navbar">
             <div class="menu">
-                <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
+                <span style="font-size:4.5vh;cursor:pointer" onclick="abre()">&#9776;</span>
             </div>
             <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
                 <a href="/cadastro">Cadastro</a>
             </div>
             <a href="/">
-                <img src="../static/public/logo.png" alt="logo">
+                <img src="../static/public/logo.png" alt="logo" class="logo">
             </a>
             </div>
         </header>
