--- a/src/static/styles/styles.css
+++ b/src/static/styles/styles.css
@@ -81,11 +81,6 @@ body {
     margin-right: auto;
 }
 
-.logo{
-  height: 20px;
-  width: 140px;
-}
-
 .user{
   position: absolute;
   top:6vh;
@@ -315,7 +310,7 @@ body {
 .login-form{
   width: 23%;
   left: 50%;
-  position:flex;
+  position:absolute;
   transform: translate(-50%,-50%);
   font-family: Arial, Helvetica, sans-serif;
   color: #000;
@@ -824,4 +819,62 @@ span.botoes
   border: none;
   border-radius: 8px;
   margin-bottom: 10px;
+}
+
+/* Responsividade */
+@media only screen and (max-width: 500px) {
+  .logo{
+    position: relative;
+    right: 8%;
+  }
+
+  .login-form{
+    width: 70%;
+    left: 50%;
+    position:absolute;
+    transform: translate(-50%,-50%);
+    font-family: Arial, Helvetica, sans-serif;
+    color: #000;
+    border-radius: 5px;
+    background-color: #f0e5c7;
+    padding: 2.5vh;
+    margin-top: 30vh;
+  }
+  
+  .login-form label{
+    font-size: 4vw;
+    margin: 1vw 0;
+  }
+
+  .login-form input{
+    font-size: 3vw;
+    width:100%;
+    padding: 1vh 0.5vw;
+    border: 0;
+    outline:none;
+    border-radius: 1vh;
+    margin-bottom: 1vh;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .login-form button {
+    font-size: 4vw;
+    font-weight:bold;
+    padding:10px 15px;
+    width:50%;
+    border-radius:5px;
+    border:0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    display:block;
+    cursor: pointer;
+  }
+  
+  .login-form button:hover { 
+    background-color: #0073B6;
+    color:white;
+    transition: 300ms;
+  }
 }
