--- a/src/templates/cadastro.html
+++ b/src/templates/cadastro.html
@@ -41,7 +41,7 @@
                 <a href="/login">Login</a>
             </div>
             <a href="/">
-                <img src="../static/public/logo.png" alt="logo">
+                <img src="../static/public/logo.png" alt="logo" class="logo">
             </a>
             </div>
         </header>
