--- a/src/static/styles/styles.css
+++ b/src/static/styles/styles.css
@@ -238,7 +238,6 @@ body {
   font-size: 1.2vw;
   color: rgb(255, 0, 0);
   text-align: center;
-
 }
 
 
@@ -876,5 +875,36 @@ span.botoes
     background-color: #0073B6;
     color:white;
     transition: 300ms;
+  }
+
+  .altera-form{
+    width: 70%;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #000;
+    border-radius: 5px;
+    background-color: #f0e5c7;
+    padding: 25px;
+    margin-top: 5vh;
+  }
+
+  #confimacaoSenha{
+    font-size: 4vw;
+    color: rgb(255, 0, 0);
+    text-align: center;
+  }
+
+  .voltar button {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 1vh;
+  
+      color: black;
+      font-size: 5vw;
+      border: none;
+      border-radius: 1vw;
+      padding: 0 1vw;
+      text-decoration: none;
+  
   }
 }
